# inspection-platform

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260425_0001_initial_scaffold.py
backend/app/: main.py  worker.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  datasources.py  elk.py  health.py  jobs.py  rules.py  scheduler.py
backend/app/core/: celery_app.py  config.py  crypto.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit.py  base.py  datasource.py  enums.py  job.py  report.py  rule.py  user.py
backend/app/schemas/: auth.py  common.py  datasource.py  job.py  rule.py
backend/app/services/: datasource_probe.py  elk_inspector.py  execution_dispatch.py  inspection_executor.py  job_service.py  report_generator.py  scheduler_service.py
backend/app/tasks/: execution.py  scheduler.py
backend/tests/services/: test_auth.py  test_execution_dispatch.py  test_inspection_executor.py  test_scheduler.py
config/: elk_inspection.yaml
docs/: FULL_DOCUMENTATION.md
docs/process/: development-workflow.md  versioning.md
frontend/src/pages/: Dashboard.tsx
scripts/: promote_user.py  release.ps1
