[project]
name = "inspection-platform-backend"
version = "0.2.0"
description = "Backend MVP scaffold for an automated inspection platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "cryptography>=42.0.8",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.4",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

